gateone.js and terminal.js:  Moved the code that handles screen resizes from gateone.js into terminal.js. gateone.py:  Added some fixes for OpenBSD. utils.py:  Added some fixes for OpenBSD. gateone.js:  Updated GateOne.Events.off() to reflect recent improvements made to OnOff.js (which now has its own repo: https://github.com/LiftoffSoftware/OnOff) gateone.js:  Moved GateOne.prefs.autoConnectURL to the SSH plugin (ssh.js). gateone.js:  Moved a few little things here and there to terminal.js (window resizing logic). gateone.js:  GateOne.Visual.toggleGridView() now sets/unsets the 'wsshadow' class on workspaces.  This should provide better contrast when in grid view. terminal.js:  Moved the autoConnectURL logic into the SSH plugin. terminal.js:  Trying out a new icon for the Terminal-specific stuff in the toolbar. terminal.js:  Terminal-specific icons will now be removed (from view) when there's no terminal on a given workspace via two new functions that are attached to the switchWorkspaceEvent():  GateOne.Terminal.hideIcons() and GateOne.Terminal.showIcons(). Themes:  Added a new .wsshadow class that gets added to workspaces when the grid view is brought up.  It basically just adds a visible border to separate the workspaces now that #gateone doesn't have a background different from workspaces.

--- a/gateone/templates/themes/dark-black.css
+++ b/gateone/templates/themes/dark-black.css
@@ -66,6 +66,9 @@
     -o-transition: -o-transform 1s ease-in-out;
     transition: transform 1s ease-in-out;
 }
+#{{container}} .wsshadow{
+    box-shadow: 0 0 1em #fff;
+}
 #{{container}} .new_workspace_workspace {
     width: 100%;
     height: 100%;
